# GL_render

./: CMakeLists.txt  README.md  Read me.md  main.cpp
Assets/Models/: test_room.mtl
Engine/: CMakeLists.txt  gui_renderer.cpp  gui_renderer.h  input_manager.cpp  input_manager.h  model.cpp  model.h  render.cpp  render.h  scene.cpp  scene.h  shader.cpp  shader.h
Shader/: gui.frag  gui.vert  pbrshader.frag  pbrshader.vert
fonts/: README.md
